made bottom nav bar fixed on mobile, fixed scroll bug on mobile view

--- a/src/styles/_cart-items.scss
+++ b/src/styles/_cart-items.scss
@@ -11,6 +11,11 @@
         justify-content: center;
         align-items: center;
         border:1px solid $summer-white; 
+        @media(max-width:550px){
+            position: fixed;
+            bottom: 0px !important;
+            width: 100%;
+        }
     }
 
     .CartItems__container{
